tighter solver tols again, num_workers

--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -26,8 +26,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_workers = 5\n",
+    "master_dir = \"master_opt\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
    "metadata": {},
    "source": [
     "The existing master ies directory - needed so we can get the calibrated par values"
@@ -36,17 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ies_d = \"master_ies_advanced\"\n",
+    "ies_d = \"master_ies\"\n",
     "assert os.path.exists(ies_d)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "Define the working directory where the opt-modified control file will be "
@@ -55,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -80,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "First we need to modify the parameter data section to identify which parameters will be adjusted during optimization - we call these decision variables:"
@@ -100,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "Get the posterior parameter ensemble and look for the \"base\" realization"
@@ -118,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "Mark all parameter as \"fixed\""
@@ -159,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "Find all parameters with \"wel\" in the name:"
@@ -177,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "Markk these well parameters as \"none\" transformed and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
@@ -200,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly"
@@ -225,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize:"
@@ -256,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "Set constraints at each gw observation location that during the future/optimization period, we arent dewatering the upper or lower aquifer"
@@ -284,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "We also need to make sure that during each future stress period, we are producing the long-term historic avg production"
@@ -340,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function"
@@ -387,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,17 +420,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "master_dir = \"master_opt\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +439,7 @@
     "    working_d,\n",
     "    \"pestpp-opt\",\n",
     "    \"pest.pst\",\n",
-    "    num_workers=10,\n",
+    "    num_workers=num_workers,\n",
     "    worker_root=master_dir,\n",
     "    master_dir=master_dir,\n",
     ")"
@@ -438,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -446,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -455,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -476,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "source": [
     "Plot the optimal decision variable values:"
@@ -485,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,20 +507,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "44",
    "metadata": {},
    "source": [
     "## investigating the response matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rm = pyemu.Matrix.from_binary(os.path.join(master_dir, \"pest.1.jcb\")).to_dataframe()"
    ]
   },
   {
@@ -521,13 +520,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm.loc[obj_name, :]"
+    "rm = pyemu.Matrix.from_binary(os.path.join(master_dir, \"pest.1.jcb\")).to_dataframe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm.loc[obj_name, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
