--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -100,18 +100,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.remove_package(\"ims\")\n",
-    "ims = flopy.mf6.ModflowIms(\n",
-    "    sim,\n",
-    "    print_option=\"summary\",\n",
-    "    complexity=\"complex\",\n",
-    "    under_relaxation=None,\n",
-    "    linear_acceleration=\"bicgstab\",\n",
-    "    outer_maximum=500,\n",
-    "    inner_maximum=100,\n",
-    "    outer_dvclose=1e-3,\n",
-    "    inner_dvclose=1e-3,\n",
-    ")"
+    "# sim.remove_package(\"ims\")\n",
+    "# ims = flopy.mf6.ModflowIms(\n",
+    "#     sim,\n",
+    "#     print_option=\"summary\",\n",
+    "#     complexity=\"complex\",\n",
+    "#     under_relaxation=None,\n",
+    "#     linear_acceleration=\"bicgstab\",\n",
+    "#     outer_maximum=500,\n",
+    "#     inner_maximum=100,\n",
+    "#     outer_dvclose=1e-3,\n",
+    "#     inner_dvclose=1e-3,\n",
+    "# )"
    ]
   },
   {
