--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -36,7 +36,9 @@
     "# the new dataset for this experiment\n",
     "working_d = \"model_and_pest_file_exp1\"\n",
     "# the master ies dir that will be created\n",
-    "master_dir = \"master_ies_advanced_noforeunc\""
+    "master_dir = \"master_ies\"\n",
+    "# number of parallel workers\n",
+    "num_workers = 5"
    ]
   },
   {
@@ -131,7 +133,7 @@
     "    working_d,\n",
     "    \"pestpp-ies\",\n",
     "    \"pest.pst\",\n",
-    "    num_workers=10,\n",
+    "    num_workers=num_workers,\n",
     "    worker_root=master_dir,\n",
     "    master_dir=master_dir,\n",
     ")"
