check in after chasing diffs

--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -353,7 +353,9 @@
     "    obs.loc[gobs.obsnme, \"distance\"] = gobs.distance\n",
     "    v = pyemu.geostats.ExpVario(contribution=1.0, a=365 * 20)\n",
     "    gs = pyemu.geostats.GeoStruct(variograms=v, name=grp)\n",
-    "    struct_dict[gs] = gobs.obsnme.to_list()"
+    "    names = gobs.obsnme.to_list()\n",
+    "    names.sort()\n",
+    "    struct_dict[gs] = names"
    ]
   },
   {
@@ -373,35 +375,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise = pyemu.helpers.autocorrelated_draw(pst, struct_dict, num_reals=1000)"
+    "noise = pyemu.helpers.autocorrelated_draw(\n",
+    "    pst, struct_dict, num_reals=1000, verbose=True, enforce_bounds=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "30",
-   "metadata": {},
-   "source": [
-    "We know from expert knowledge that the vertical head differences are never negative between the water table and aquifer, so let's repair any noise realizations that have that condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lbnd = obs.loc[pd.notna(obs.lower_bound), \"lower_bound\"]\n",
-    "for name, bnd in zip(lbnd.index, lbnd.values):\n",
-    "    vals = noise.loc[:, name].values\n",
-    "    vals[vals < bnd] = bnd\n",
-    "    noise.loc[:, name] = vals\n",
-    "    print(name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32",
    "metadata": {},
    "source": [
     "Save the noise ensemble, tell ies about it, and an noptmax=-2 test run:"
@@ -410,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "32",
    "metadata": {},
    "source": [
     "As you can see from the phi group summary, we need some rebalanced weights.  One way to do this is the the ies_phi_factor_file:"
@@ -433,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
