--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -36,8 +36,8 @@
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working_advanced-monthly\")\n",
     "\n",
     "\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -100,18 +100,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sim.remove_package(\"ims\")\n",
-    "# ims = flopy.mf6.ModflowIms(\n",
-    "#     sim,\n",
-    "#     print_option=\"summary\",\n",
-    "#     complexity=\"complex\",\n",
-    "#     under_relaxation=None,\n",
-    "#     linear_acceleration=\"bicgstab\",\n",
-    "#     outer_maximum=500,\n",
-    "#     inner_maximum=100,\n",
-    "#     outer_dvclose=1e-3,\n",
-    "#     inner_dvclose=1e-3,\n",
-    "# )"
+    "sim.remove_package(\"ims\")\n",
+    "ims = flopy.mf6.ModflowIms(\n",
+    "    sim,\n",
+    "    print_option=\"summary\",\n",
+    "    complexity=\"complex\",\n",
+    "    under_relaxation=None,\n",
+    "    linear_acceleration=\"bicgstab\",\n",
+    "    outer_maximum=500,\n",
+    "    inner_maximum=100,\n",
+    "    outer_dvclose=1e-3,\n",
+    "    inner_dvclose=1e-3,\n",
+    ")"
    ]
   },
   {
