--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -414,40 +414,13 @@
    "id": "33",
    "metadata": {},
    "source": [
-    "Do the same for HK in layer 3 and HK in layers 4 and 5 together"
+    "Do the same for HK in layers 4 and 5 together"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = pf.add_parameters(\n",
-    "#     k_files[2],\n",
-    "#     par_type=\"pilotpoints\",\n",
-    "#     pp_options={\"pp_space\": 3},\n",
-    "#     lower_bound=0.1,\n",
-    "#     upper_bound=10.0,\n",
-    "#     geostruct=pp_geostruct_k,\n",
-    "#     par_name_base=\"hk-pp-conf\",\n",
-    "#     pargp=\"hk-pp-conf\",\n",
-    "# )\n",
-    "# df = pf.add_parameters(\n",
-    "#     k_files[2],\n",
-    "#     par_type=\"constant\",\n",
-    "#     lower_bound=0.10,\n",
-    "#     upper_bound=1.0,\n",
-    "#     par_name_base=\"hk-cn-conf\",\n",
-    "#     pargp=\"hk-cn-conf\",\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "source": [
     "To let us see what the actual HK array that mf6 sees, let's add that array as a set of observatitons also:"
@@ -482,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "source": [
     "Setup a similar scheme of parameters to VK:"
@@ -506,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,30 +487,30 @@
     "assert len(k_files) == gwf.dis.nlay.data\n",
     "k33_files.sort()\n",
     "\n",
-    "# df = pf.add_parameters(\n",
-    "#     k33_files[:2],\n",
-    "#     par_type=\"pilotpoints\",\n",
-    "#     pp_options={\"pp_space\": 3},\n",
-    "#     lower_bound=0.1,\n",
-    "#     upper_bound=10.0,\n",
-    "#     geostruct=pp_geostruct_k33,\n",
-    "#     par_name_base=\"k33-pp-wt\",\n",
-    "#     pargp=\"k33-pp-wt\",\n",
-    "# )\n",
-    "# df = pf.add_parameters(\n",
-    "#     k33_files[:2],\n",
-    "#     par_type=\"constant\",\n",
-    "#     lower_bound=0.1,\n",
-    "#     upper_bound=10.0,\n",
-    "#     par_name_base=\"k33-cn-wt\",\n",
-    "#     pargp=\"k33-cn-wt\",\n",
-    "# )\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[:2],\n",
+    "    par_type=\"pilotpoints\",\n",
+    "    pp_options={\"pp_space\": 3},\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    geostruct=pp_geostruct_k33,\n",
+    "    par_name_base=\"k33-pp-wt\",\n",
+    "    pargp=\"k33-pp-wt\",\n",
+    ")\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[:2],\n",
+    "    par_type=\"constant\",\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    par_name_base=\"k33-cn-wt\",\n",
+    "    pargp=\"k33-cn-wt\",\n",
+    ")\n",
     "\n",
-    "# pf.add_observations(\n",
-    "#     k33_files[0],\n",
-    "#     obsgp=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
-    "#     prefix=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
-    "# )\n",
+    "pf.add_observations(\n",
+    "    k33_files[0],\n",
+    "    obsgp=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[0].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")\n",
     "\n",
     "df = pf.add_parameters(\n",
     "    k33_files[2],\n",
@@ -565,35 +538,35 @@
     ")\n",
     "\n",
     "\n",
-    "# df = pf.add_parameters(\n",
-    "#     k33_files[3:],\n",
-    "#     par_type=\"pilotpoints\",\n",
-    "#     pp_options={\"pp_space\": 3},\n",
-    "#     lower_bound=0.1,\n",
-    "#     upper_bound=10.0,\n",
-    "#     geostruct=pp_geostruct_k33,\n",
-    "#     par_name_base=\"k33-pp-aq\",\n",
-    "#     pargp=\"k33-pp-aq\",\n",
-    "# )\n",
-    "# df = pf.add_parameters(\n",
-    "#     k33_files[3:],\n",
-    "#     par_type=\"constant\",\n",
-    "#     lower_bound=0.1,\n",
-    "#     upper_bound=10.0,\n",
-    "#     par_name_base=\"k33-cn-aq\",\n",
-    "#     pargp=\"k33-cn-aq\",\n",
-    "# )\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[3:],\n",
+    "    par_type=\"pilotpoints\",\n",
+    "    pp_options={\"pp_space\": 3},\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    geostruct=pp_geostruct_k33,\n",
+    "    par_name_base=\"k33-pp-aq\",\n",
+    "    pargp=\"k33-pp-aq\",\n",
+    ")\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files[3:],\n",
+    "    par_type=\"constant\",\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    par_name_base=\"k33-cn-aq\",\n",
+    "    pargp=\"k33-cn-aq\",\n",
+    ")\n",
     "\n",
-    "# pf.add_observations(\n",
-    "#     k33_files[-1],\n",
-    "#     obsgp=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
-    "#     prefix=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
-    "# )"
+    "pf.add_observations(\n",
+    "    k33_files[-1],\n",
+    "    obsgp=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    prefix=k33_files[-1].split(\".\")[1].replace(\"_\", \"-\"),\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "source": [
     "And SS and sy (in layer 1 only):"
@@ -602,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,21 +715,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "source": [
     "Set up some parameters for the pumping wells - we arent going to adjust these (dont we all have perfect historic water use data?!), but we will use them as decision variables later on..."
@@ -765,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,12 +747,13 @@
     "    for f in os.listdir(pf.new_d)\n",
     "    if f.startswith(\"sv.prediction.well_stress_period_data_\")\n",
     "]\n",
-    "assert len(predwel_files) > 0"
+    "assert len(predwel_files) > 0\n",
+    "predwel_files"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "48",
    "metadata": {},
    "source": [
     "Since the prediction well only has information for the predictive period, we can use its stress period/kper information to for other packages:"
@@ -788,14 +762,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
     "kper_start_pred = 1000000\n",
     "for pwel_file in predwel_files:\n",
-    "    kper = kper = int(pwel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
-    "    kper_min = min(kper_start_pred, kper)\n",
+    "    kper = int(pwel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
+    "    kper_start_pred = min(kper_start_pred, kper)\n",
     "    pf.add_parameters(\n",
     "        pwel_file,\n",
     "        par_type=\"grid\",\n",
@@ -808,12 +782,13 @@
     "        transform=\"none\",\n",
     "        initial_value=1.0,\n",
     "        par_style=\"m\",\n",
-    "    )"
+    "    )\n",
+    "assert kper_start_pred < 100000"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "source": [
     "Now find any remaining wel/maw files:"
@@ -822,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,15 +806,26 @@
     "if len(wel_files) == 0:\n",
     "    wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.pwell.wel_\")]\n",
     "    ismaw = False\n",
-    "assert len(wel_files) > 0"
+    "assert len(wel_files) > 0\n",
+    "wel_files.sort()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "52",
    "metadata": {},
    "source": [
     "And add parameters for them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wel_files"
    ]
   },
   {
