--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -38,7 +38,7 @@
     "# the master ies dir that will be created\n",
     "master_dir = \"master_ies\"\n",
     "# number of parallel workers\n",
-    "num_workers = 5"
+    "num_workers = 15"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noptmax = 1"
+    "noptmax = None"
    ]
   },
   {
