--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_workers = 5\n",
+    "num_workers = 15\n",
     "master_dir = \"master_opt\""
    ]
   },
@@ -156,30 +156,12 @@
    "source": [
     "if \"base\" in pe.index:\n",
     "    print(\"using base realization\")\n",
-    "    par.loc[pe.columns, \"parval1\"] = pe.loc[\"base\", :].values"
+    "    par.loc[pe.columns, \"parval1\"] = pe.loc[\"base\", :].round(6).values"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "15",
-   "metadata": {},
-   "source": [
-    "Mark all parameter as \"fixed\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "par[\"partrans\"] = \"fixed\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17",
    "metadata": {},
    "source": [
     "Find all parameters with \"wel\" in the name:"
@@ -188,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "17",
    "metadata": {},
    "source": [
     "Markk these well parameters as \"none\" transformed and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
@@ -211,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +204,13 @@
     "\n",
     "pst.rectify_pgroups()\n",
     "pst.parameter_groups.loc[\"decvar\", \"derinc\"] = 0.2\n",
-    "pst.parameter_groups.loc[\"decvar\", \"inctyp\"] = \"absolute\""
+    "pst.parameter_groups.loc[\"decvar\", \"inctyp\"] = \"absolute\"\n",
+    "pst.pestpp_options[\"opt_dec_var_groups\"] = \"decvar\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "19",
    "metadata": {},
    "source": [
     "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly"
@@ -236,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,13 +235,13 @@
     "assert fobs.shape[0] == 1\n",
     "cal_diff = pst.ies.get(\"obsen\", post_iter).loc[\"base\", fobs.obsnme]\n",
     "obs.loc[fobs.obsnme, \"weight\"] = 1.0\n",
-    "obs.loc[fobs.obsnme, \"obsval\"] = cal_diff * 0.5\n",
+    "obs.loc[fobs.obsnme, \"obsval\"] = 0.0  # cal_diff * 0.5\n",
     "obs.loc[fobs.obsnme, \"obgnme\"] = \"greater_than\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "21",
    "metadata": {},
    "source": [
     "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize:"
@@ -267,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "23",
    "metadata": {},
    "source": [
     "Set constraints at each gw observation location that during the future/optimization period, we arent dewatering the upper or lower aquifer"
@@ -295,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "27",
    "metadata": {},
    "source": [
     "We also need to make sure that during each future stress period, we are producing the long-term historic avg production"
@@ -351,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,18 +361,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs.loc[pred_wfobs.obsnme, \"weight\"] = 1.0\n",
-    "obs.loc[pred_wfobs.obsnme, \"obsval\"] = hist_max * 0.5\n",
+    "obs.loc[pred_wfobs.obsnme, \"obsval\"] = hist_max * 0.9\n",
     "obs.loc[pred_wfobs.obsnme, \"obgnme\"] = \"greater_than\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "31",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function"
@@ -398,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -428,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "36",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -455,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "37",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -464,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "39",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -485,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "40",
    "metadata": {},
    "source": [
     "Plot the optimal decision variable values:"
@@ -494,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "42",
    "metadata": {},
    "source": [
     "## investigating the response matrix"
@@ -516,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,6 +546,115 @@
     "ax.set_xticks(np.arange(cf.shape[0]))\n",
     "_ = ax.set_xticklabels(rm.columns, rotation=90)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47",
+   "metadata": {},
+   "source": [
+    "# Reliability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe = pst.ies.get(\"obsen\", post_iter)\n",
+    "ax = oe.loc[:, fobs.obsnme].hist()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "tell pestpp-opt how to use the uncertainty. We can also take advantage of the linear assumption and reuse the previous results so we dont need to any additional model runs (!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe.to_csv(os.path.join(working_d, \"obs_stack.csv\"))\n",
+    "pst.pestpp_options[\"opt_obs_stack\"] = \"obs_stack.csv\"\n",
+    "pst.pestpp_options[\"opt_recalc_chance_every\"] = 999\n",
+    "shutil.copy2(\n",
+    "    os.path.join(master_dir, \"pest.1.jcb\"), os.path.join(working_d, \"respmat.jcb\")\n",
+    ")\n",
+    "pst.pestpp_options[\"base_jacobian\"] = \"respmat.jcb\"\n",
+    "shutil.copy2(\n",
+    "    os.path.join(master_dir, \"pest.1.jcb.rei\"), os.path.join(working_d, \"hotstart.rei\")\n",
+    ")\n",
+    "pst.pestpp_options[\"hotstart_resfile\"] = \"hotstart.rei\"\n",
+    "pst.pestpp_options[\"opt_skip_final\"] = True\n",
+    "pst.pestpp_options[\"opt_risk\"] = 0.85\n",
+    "\n",
+    "\n",
+    "par = pst.parameter_data\n",
+    "par.loc[par.partrans == \"fixed\", \"partrans\"] = \"log\"\n",
+    "pst.write(os.path.join(working_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
+   "metadata": {},
+   "source": [
+    "Rerun pestpp-opt :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyemu.os_utils.run(\"pestpp-opt pest.pst\", cwd=working_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_phi_value = pd.read_csv(\n",
+    "    os.path.join(working_d, \"pest.slp.iobj.csv\"), index_col=0\n",
+    ").values[0][0]\n",
+    "org_phi_value = pst.ies.get(\"obsen\", post_iter).loc[\"base\", obj_name]\n",
+    "org_phi_value, opt_phi_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(working_d, \"pest.1.par\")).loc[\n",
+    "    wpar.parnme\n",
+    "]\n",
+    "ax = opt_par_vals[\"parval1\"].plot(kind=\"bar\")\n",
+    "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
