--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -88,9 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsi_d = \"dsi_master\"\n",
-    "if os.path.exists(dsi_d):\n",
-    "    shutil.rmtree(dsi_d)"
+    "dsi_d = \"dsi_master\""
    ]
   },
   {
@@ -100,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
+    "if os.path.exists(dsi_d):\n",
+    "    shutil.rmtree(dsi_d)"
    ]
   },
   {
@@ -110,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpst"
+    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
    ]
   },
   {
@@ -120,8 +119,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dpst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
-    "dpst.control_data.noptmax = 10\n",
+    "dpst.control_data.noptmax = 3\n",
     "dpst.pestpp_options.pop(\"parcov\", None)\n",
     "dpst.pestpp_options[\"ies_obs_en\"] = pst.pestpp_options[\"ies_obs_en\"]\n",
     "shutil.copy2(\n",
@@ -141,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +200,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags = [\n",
+    "    \"npf-k-layer1\",\n",
+    "    \"npf-k-layer5\",\n",
+    "    \"npf-k33-layer3\",\n",
+    "    \"sto-ss-layer1\",\n",
+    "    \"sto-sy-layer1\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tag in tags:\n",
+    "    helpers.plot_ies_properties(dsi_d, tag, pst_name=\"dsi.pst\", noptmax=noptmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": []
