--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Run DSI with PESTPP-IES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,24 +23,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ies_d = \"master_ies\"\n",
-    "assert os.path.exists(ies_d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pst = pyemu.Pst(os.path.join(ies_d, \"pest.pst\"))"
+    "Define the existing ies master dir"
    ]
   },
   {
@@ -42,13 +37,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oe = pst.ies.obsen0"
+    "ies_d = \"master_ies_base\"\n",
+    "assert os.path.exists(ies_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "Load the control file from ies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst = pyemu.Pst(os.path.join(ies_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "Get the prior observation (simulated results) ensemble - this will have outputs from the past and the future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe = pst.ies.obsen0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "DSI works best when the histograms of the values of interest are (nearly) Guassian. So we can use a normal-score transform to help with this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +96,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "Define the DSI instance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,89 +120,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dsi.fit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dsi_d = \"dsi_master\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dsi_d):\n",
-    "    shutil.rmtree(dsi_d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
-    "dpst.control_data.noptmax = 3\n",
-    "dpst.pestpp_options.pop(\"parcov\", None)\n",
-    "dpst.pestpp_options[\"ies_obs_en\"] = pst.pestpp_options[\"ies_obs_en\"]\n",
-    "shutil.copy2(\n",
-    "    os.path.join(ies_d, pst.pestpp_options[\"ies_obs_en\"]),\n",
-    "    os.path.join(dsi_d, pst.pestpp_options[\"ies_obs_en\"]),\n",
-    ")\n",
-    "\n",
-    "dpst.pestpp_options[\"ies_phi_factor_file\"] = pst.pestpp_options[\"ies_phi_factor_file\"]\n",
-    "shutil.copy2(\n",
-    "    os.path.join(ies_d, pst.pestpp_options[\"ies_phi_factor_file\"]),\n",
-    "    os.path.join(dsi_d, pst.pestpp_options[\"ies_phi_factor_file\"]),\n",
-    ")\n",
-    "dpst.pestpp_options[\"ies_bad_phi_sigma\"] = pst.pestpp_options[\"ies_bad_phi_sigma\"]\n",
-    "dpst.pestpp_options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "12",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
+    "Now we need to \"fit\" our statistical model, which for this form of DSI is pretty trivial"
    ]
   },
   {
@@ -164,17 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
+    "dsi.fit()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "14",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "noptmax = 3"
+    "Define the directory that will hold the dsi files"
    ]
   },
   {
@@ -184,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=noptmax)"
+    "dsi_d = \"master_dsi\""
    ]
   },
   {
@@ -194,13 +162,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if os.path.exists(dsi_d):\n",
+    "    shutil.rmtree(dsi_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "Define some options for ies to use with the dsi model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
+    "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
+    "dpst.control_data.noptmax = 3\n",
+    "dpst.pestpp_options.pop(\"parcov\", None)\n",
+    "# use the same obs+noise ensemble we used before\n",
+    "dpst.pestpp_options[\"ies_obs_en\"] = pst.pestpp_options[\"ies_obs_en\"]\n",
+    "shutil.copy2(\n",
+    "    os.path.join(ies_d, pst.pestpp_options[\"ies_obs_en\"]),\n",
+    "    os.path.join(dsi_d, pst.pestpp_options[\"ies_obs_en\"]),\n",
+    ")\n",
+    "# use the same phi-factor file we used before\n",
+    "dpst.pestpp_options[\"ies_phi_factor_file\"] = pst.pestpp_options[\"ies_phi_factor_file\"]\n",
+    "shutil.copy2(\n",
+    "    os.path.join(ies_d, pst.pestpp_options[\"ies_phi_factor_file\"]),\n",
+    "    os.path.join(dsi_d, pst.pestpp_options[\"ies_phi_factor_file\"]),\n",
+    ")\n",
+    "# and also the same:\n",
+    "dpst.pestpp_options[\"ies_bad_phi_sigma\"] = pst.pestpp_options[\"ies_bad_phi_sigma\"]\n",
+    "dpst.pestpp_options"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "Save the control file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24",
+   "metadata": {},
+   "source": [
+    "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "All this is the same as in the ies notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noptmax = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=noptmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", include_t=True, noptmax=noptmax)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
