--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "num_workers = 15\n",
-    "master_dir = \"master_opt\""
+    "master_d = \"master_opt\""
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ies_d = \"master_ies\"\n",
+    "ies_d = \"master_ies_base\"\n",
     "assert os.path.exists(ies_d)"
    ]
   },
@@ -173,18 +173,27 @@
    "id": "16",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "wpar = par.loc[par.parnme.str.contains(\"wel\"), :].copy()\n",
     "wpar[\"kper\"] = wpar.kper.astype(int)\n",
     "start_pred_kper = wpar.loc[wpar.parnme.str.contains(\"pred\"), \"kper\"].min()\n",
     "pred_wpar = wpar.loc[wpar.kper >= start_pred_kper, :]\n",
     "assert pred_wpar.shape[0] > 0\n",
+    "print(pred_wpar.shape[0], \"decision variables\")\n",
     "pred_wpar.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "Markk these well parameters as \"none\" transformed and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
@@ -193,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +210,9 @@
     "par.loc[pred_wpar.parnme, \"pargp\"] = \"decvar\"\n",
     "par.loc[pred_wpar.parnme, \"parubnd\"] = 1.5\n",
     "par.loc[pred_wpar.parnme, \"parlbnd\"] = 0.0\n",
+    "predwel_wpar = wpar.loc[wpar.parnme.str.contains(\"pred\"), \"parnme\"]\n",
+    "assert len(predwel_wpar) > 0\n",
+    "par.loc[predwel_wpar, \"parval1\"] = 0.0  # set the pred well rates to zero initially\n",
     "\n",
     "pst.rectify_pgroups()\n",
     "pst.parameter_groups.loc[\"decvar\", \"derinc\"] = 0.2\n",
@@ -210,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly"
@@ -219,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,13 +247,13 @@
     "assert fobs.shape[0] == 1\n",
     "cal_diff = pst.ies.get(\"obsen\", post_iter).loc[\"base\", fobs.obsnme]\n",
     "obs.loc[fobs.obsnme, \"weight\"] = 1.0\n",
-    "obs.loc[fobs.obsnme, \"obsval\"] = 0.0  # cal_diff * 0.5\n",
+    "obs.loc[fobs.obsnme, \"obsval\"] = cal_diff * 0.5\n",
     "obs.loc[fobs.obsnme, \"obgnme\"] = \"greater_than\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "source": [
     "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize:"
@@ -250,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,16 +281,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "source": [
-    "Set constraints at each gw observation location that during the future/optimization period, we arent dewatering the upper or lower aquifer"
+    "Set constraints at each gw observation location so that during the future/optimization period, we arent dewatering the upper or lower aquifer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "source": [
     "We also need to make sure that during each future stress period, we are producing the long-term historic avg production"
@@ -334,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +363,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_wfobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function"
@@ -381,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -411,26 +433,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(master_dir):\n",
-    "    shutil.rmtree(master_dir)\n",
-    "os.makedirs(master_dir)\n",
+    "if os.path.exists(master_d):\n",
+    "    shutil.rmtree(master_d)\n",
+    "os.makedirs(master_d)\n",
     "pyemu.os_utils.start_workers(\n",
     "    working_d,\n",
     "    \"pestpp-opt\",\n",
     "    \"pest.pst\",\n",
     "    num_workers=num_workers,\n",
-    "    worker_root=master_dir,\n",
-    "    master_dir=master_dir,\n",
+    "    worker_root=master_d,\n",
+    "    master_dir=master_d,\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "38",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -438,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "39",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -447,20 +469,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
     "opt_phi_value = pd.read_csv(\n",
-    "    os.path.join(master_dir, \"pest.slp.iobj.csv\"), index_col=0\n",
+    "    os.path.join(master_d, \"pest.slp.iobj.csv\"), index_col=0\n",
     ").values[0][0]\n",
-    "org_phi_value = pst.ies.get(\"obsen\", post_iter).loc[\"base\", obj_name]\n",
-    "org_phi_value, opt_phi_value"
+    "hist_max, opt_phi_value"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "41",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -468,32 +489,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
-   "metadata": {},
-   "source": [
-    "Plot the optimal decision variable values:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(master_dir, \"pest.1.par\")).loc[\n",
-    "    wpar.parnme\n",
-    "]\n",
-    "ax = opt_par_vals[\"parval1\"].plot(kind=\"bar\")\n",
-    "ax.grid()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "42",
    "metadata": {},
    "source": [
-    "## investigating the response matrix"
+    "Plot the optimal decision variable values:"
    ]
   },
   {
@@ -503,13 +502,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm = pyemu.Matrix.from_binary(os.path.join(master_dir, \"pest.1.jcb\")).to_dataframe()"
+    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(master_d, \"pest.1.par\")).loc[\n",
+    "    wpar.parnme\n",
+    "]\n",
+    "ax = opt_par_vals[\"parval1\"].plot(kind=\"bar\")\n",
+    "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44",
+   "metadata": {},
+   "source": [
+    "## investigating the response matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm = pyemu.Matrix.from_binary(os.path.join(master_d, \"pest.1.jcb\")).to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,16 +570,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "49",
    "metadata": {},
    "source": [
     "# Reliability"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50",
+   "metadata": {},
+   "source": [
+    "plot the histogram of the river swgw flux difference (the obs we used as a constraint)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,55 +598,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "52",
    "metadata": {},
    "source": [
     "tell pestpp-opt how to use the uncertainty. We can also take advantage of the linear assumption and reuse the previous results so we dont need to any additional model runs (!)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oe.to_csv(os.path.join(working_d, \"obs_stack.csv\"))\n",
-    "pst.pestpp_options[\"opt_obs_stack\"] = \"obs_stack.csv\"\n",
-    "pst.pestpp_options[\"opt_recalc_chance_every\"] = 999\n",
-    "shutil.copy2(\n",
-    "    os.path.join(master_dir, \"pest.1.jcb\"), os.path.join(working_d, \"respmat.jcb\")\n",
-    ")\n",
-    "pst.pestpp_options[\"base_jacobian\"] = \"respmat.jcb\"\n",
-    "shutil.copy2(\n",
-    "    os.path.join(master_dir, \"pest.1.jcb.rei\"), os.path.join(working_d, \"hotstart.rei\")\n",
-    ")\n",
-    "pst.pestpp_options[\"hotstart_resfile\"] = \"hotstart.rei\"\n",
-    "pst.pestpp_options[\"opt_skip_final\"] = True\n",
-    "pst.pestpp_options[\"opt_risk\"] = 0.85\n",
-    "\n",
-    "\n",
-    "par = pst.parameter_data\n",
-    "par.loc[par.partrans == \"fixed\", \"partrans\"] = \"log\"\n",
-    "pst.write(os.path.join(working_d, \"pest.pst\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51",
-   "metadata": {},
-   "source": [
-    "Rerun pestpp-opt :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyemu.os_utils.run(\"pestpp-opt pest.pst\", cwd=working_d)"
    ]
   },
   {
@@ -627,17 +611,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_phi_value = pd.read_csv(\n",
-    "    os.path.join(working_d, \"pest.slp.iobj.csv\"), index_col=0\n",
-    ").values[0][0]\n",
-    "org_phi_value = pst.ies.get(\"obsen\", post_iter).loc[\"base\", obj_name]\n",
-    "org_phi_value, opt_phi_value"
+    "oe.to_csv(os.path.join(working_d, \"obs_stack.csv\"))\n",
+    "pst.pestpp_options[\"opt_obs_stack\"] = \"obs_stack.csv\"\n",
+    "pst.pestpp_options[\"opt_recalc_chance_every\"] = 999\n",
+    "shutil.copy2(\n",
+    "    os.path.join(master_d, \"pest.1.jcb\"), os.path.join(working_d, \"respmat.jcb\")\n",
+    ")\n",
+    "pst.pestpp_options[\"base_jacobian\"] = \"respmat.jcb\"\n",
+    "shutil.copy2(\n",
+    "    os.path.join(master_d, \"pest.1.jcb.rei\"), os.path.join(working_d, \"hotstart.rei\")\n",
+    ")\n",
+    "pst.pestpp_options[\"hotstart_resfile\"] = \"hotstart.rei\"\n",
+    "pst.pestpp_options[\"opt_skip_final\"] = True\n",
+    "pst.pestpp_options[\"opt_risk\"] = 0.6\n",
+    "\n",
+    "\n",
+    "par = pst.parameter_data\n",
+    "par.loc[par.partrans == \"fixed\", \"partrans\"] = \"log\"\n",
+    "pst.write(os.path.join(working_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54",
+   "metadata": {},
+   "source": [
+    "Rerun pestpp-opt :"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyemu.os_utils.run(\"pestpp-opt pest.pst\", cwd=working_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56",
+   "metadata": {},
+   "source": [
+    "Visualize these results the same we did earlier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_phi_value = pd.read_csv(\n",
+    "    os.path.join(working_d, \"pest.slp.iobj.csv\"), index_col=0\n",
+    ").values[0][0]\n",
+    "hist_max, opt_phi_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": []
