--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ies_d = \"master_ies_base\"\n",
+    "ies_d = \"master_ies\"\n",
     "assert os.path.exists(ies_d)"
    ]
   },
@@ -211,7 +211,7 @@
    "source": [
     "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
     "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
-    "dpst.control_data.noptmax = 3\n",
+    "dpst.control_data.noptmax = 10\n",
     "dpst.pestpp_options.pop(\"parcov\", None)\n",
     "# use the same obs+noise ensemble we used before\n",
     "dpst.pestpp_options[\"ies_obs_en\"] = pst.pestpp_options[\"ies_obs_en\"]\n",
