--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -63,8 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_prior_mc = False\n",
-    "num_workers = 5"
+    "run_prior_mc = True\n",
+    "num_workers = 10"
    ]
   },
   {
@@ -1603,15 +1603,44 @@
    "outputs": [],
    "source": [
     "if run_prior_mc:\n",
+    "    master_d = \"master_prior_mc\"\n",
+    "    pst.pestpp_options[\"ies_num_reals\"] = 50\n",
+    "    pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
     "    pyemu.os_utils.start_workers(\n",
     "        pf.new_d,\n",
     "        \"pestpp-ies\",\n",
     "        \"pest.pst\",\n",
     "        worker_root=\".\",\n",
     "        num_workers=num_workers,\n",
-    "        master_dir=\"master_prior_mc\",\n",
-    "    )"
+    "        master_dir=master_d,\n",
+    "    )\n",
+    "    pst = pyemu.Pst(os.path.join(master_d, \"pest.pst\"))\n",
+    "    helpers.plot_ies_forecasts(master_d)\n",
+    "    helpers.plot_ies_timeseries(master_d)\n",
+    "    tags = [\n",
+    "        \"npf-k-layer1\",\n",
+    "        \"npf-k-layer5\",\n",
+    "        \"npf-k33-layer3\",\n",
+    "        \"sto-ss-layer1\",\n",
+    "        \"sto-sy-layer1\",\n",
+    "    ]\n",
+    "    for tag in tags:\n",
+    "        helpers.plot_ies_properties(master_d, tag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "116",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "117",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
