--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -36,7 +36,7 @@
     "# the new dataset for this experiment\n",
     "working_d = \"model_and_pest_file_exp1\"\n",
     "# the master ies dir that will be created\n",
-    "master_d = \"master_ies_advanced_more\"\n",
+    "master_d = \"master_ies\"\n",
     "# number of parallel workers\n",
     "num_workers = 15\n",
     "# iteration number to visualize: if `None`, the final iteration is used\n",
@@ -91,9 +91,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 3\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 150\n",
+    "pst.control_data.noptmax = 4\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
+    "# pst.pestpp_options[\"ies_use_approx\"] = False\n",
+    "\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
     "# pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
