--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -91,10 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 4\n",
+    "pst.control_data.noptmax = 10\n",
     "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
-    "# pst.pestpp_options[\"ies_use_approx\"] = False\n",
+    "\n",
     "\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax, include_t=True)"
+    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax)"
    ]
   },
   {
