--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ies_d = \"master_ies_base\"\n",
+    "ies_d = \"master_ies\"\n",
     "assert os.path.exists(ies_d)"
    ]
   },
@@ -247,7 +247,7 @@
     "assert fobs.shape[0] == 1\n",
     "cal_diff = pst.ies.get(\"obsen\", post_iter).loc[\"base\", fobs.obsnme]\n",
     "obs.loc[fobs.obsnme, \"weight\"] = 1.0\n",
-    "obs.loc[fobs.obsnme, \"obsval\"] = cal_diff * 0.5\n",
+    "obs.loc[fobs.obsnme, \"obsval\"] = 0  # cal_diff * 0.5\n",
     "obs.loc[fobs.obsnme, \"obgnme\"] = \"greater_than\""
    ]
   },
@@ -623,7 +623,7 @@
     ")\n",
     "pst.pestpp_options[\"hotstart_resfile\"] = \"hotstart.rei\"\n",
     "pst.pestpp_options[\"opt_skip_final\"] = True\n",
-    "pst.pestpp_options[\"opt_risk\"] = 0.6\n",
+    "pst.pestpp_options[\"opt_risk\"] = 0.8\n",
     "\n",
     "\n",
     "par = pst.parameter_data\n",
